--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <body id="<%= canonical_id @page %>" class="container">
     <%= site_bar -%>
     <div id="page_container">
-      <header id="header" class="blog-header py-3" role="banner">
+      <header id="header" role="banner">
         <%= render "/refinery/header" -%>
       </header>
       <main id="page" role="main">
