--- a/app/views/refinery/_main_content.html.erb
+++ b/app/views/refinery/_main_content.html.erb
@@ -1,15 +1,15 @@
 <section id="main_content">
-  <div class="row">
-    <% 5.times do |i| %>
+  <% 5.times do |i| %>
+  <div class="row mb-4">
     <div class="card border-0">
       <div class="card-body">
-        <h5 class="card-title">Card title <%= "#{i}" %></h5>
+        <h4 class="card-title">Card title <%= "#{i}" %></h4>
         <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
       </div>
     </div>
-    <% end %>
   </div>
+  <% end %>
 </section>
 
 <nav aria-label="Page navigation example">
