--- a/app/views/refinery/_sidebar.html.erb
+++ b/app/views/refinery/_sidebar.html.erb
@@ -1,25 +1,38 @@
 <aside id="sidebar">
-  <div class="row">
-    <div class="card border-0">
-      <div class="card-body">
-        <h5 class="card-title">About</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
+  <div class="card border-0 mb-3">
+    <div class="card-body">
+      <h5 class="card-title">About</h5>
+      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
-    <div class="card border-0">
-      <div class="card-body">
-        <h5 class="card-title">Search</h5>
-        <form class="form-inline my-2 my-lg-0">
-          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" data-com.agilebits.onepassword.user-edited="yes">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-        </form>
-      </div>
+
+  </div>
+  <div class="card border-0 mb-3">
+    <div class="card-body">
+      <h5 class="card-title">Search</h5>
+      <form class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" data-com.agilebits.onepassword.user-edited="yes">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+      </form>
     </div>
-    <div class="card border-0">
-      <div class="card-body">
-        <h5 class="card-title">Category</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
+
+  </div>
+  <div class="card border-0 mb-3">
+    <div class="card-body">
+      <h5 class="card-title">Category</h5>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item d-flex justify-content-between align-items-center px-1">
+          Cras justo odio
+          <span class="badge badge-primary badge-pill">14</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center px-1">
+          Dapibus ac facilisis in
+          <span class="badge badge-primary badge-pill">2</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center px-1">
+          Morbi leo risus
+          <span class="badge badge-primary badge-pill">1</span>
+        </li>
+      </ul>
     </div>
   </div>
 </aside>
