--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light py-3 border-bottom fixed-top" style="background-color: #fff;">
   <div class="container">
-    <a class="navbar-brand" href="#">Lan's Blog</a>
+    <a class="navbar-brand font-weight-bold" href="#">Lan's Blog</a>
     <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
