--- a/app/views/refinery/_main_content.html.erb
+++ b/app/views/refinery/_main_content.html.erb
@@ -14,7 +14,7 @@
         <div class="post-footer">
           <span class="date"><%= Date.today %></span>
           <span class="mx-3">|</span>
-          <span>comments: 32</span>
+          <span><i class="far fa-comment"></i>: <%= (Random.rand * 1000).to_i %></span>
           <a href="#" role="button" class="btn btn-success btn-sm active">Read More</a>
         </div>
       </div>
