--- a/app/views/refinery/_sidebar.html.erb
+++ b/app/views/refinery/_sidebar.html.erb
@@ -1,36 +1,36 @@
 <aside id="sidebar">
-  <div class="card border-0 mb-3">
+  <div class="card info-section border-0 mb-3">
     <div class="card-body">
-      <h5 class="card-title">About</h5>
+      <h6 class="card-title">About</h6>
       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
     </div>
 
   </div>
-  <div class="card border-0 mb-3">
+  <div class="card info-section border-0 mb-3">
     <div class="card-body">
-      <h5 class="card-title">Search</h5>
-      <form class="form-inline my-2 my-lg-0">
+      <h6 class="card-title">Search</h6>
+      <form id="search_box" class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" data-com.agilebits.onepassword.user-edited="yes">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-      </form>
+        <button class="btn btn-success" type="submit" href="/"><i class="fas fa-search"></i></button>
+
     </div>
 
   </div>
-  <div class="card border-0 mb-3">
+  <div class="card info-section border-0 mb-3">
     <div class="card-body">
-      <h5 class="card-title">Category</h5>
+      <h6 class="card-title">Category</h6>
       <ul class="list-group list-group-flush">
         <li class="list-group-item d-flex justify-content-between align-items-center px-1">
           Cras justo odio
-          <span class="badge badge-primary badge-pill">14</span>
+          <span class="badge badge-success">14</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center px-1">
           Dapibus ac facilisis in
-          <span class="badge badge-primary badge-pill">2</span>
+          <span class="badge badge-success">2</span>
         </li>
         <li class="list-group-item d-flex justify-content-between align-items-center px-1">
           Morbi leo risus
-          <span class="badge badge-primary badge-pill">1</span>
+          <span class="badge badge-success">1</span>
         </li>
       </ul>
     </div>
