--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -1,23 +1,17 @@
 <nav class="navbar navbar-expand-md navbar-light py-3 border-bottom fixed-top" style="background-color: #fff;">
   <div class="container">
-    <a class="navbar-brand font-weight-bold" href="#">Lan's Blog</a>
+    <a class="navbar-brand font-weight-bold" href="/">Lan's Blog</a>
     <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse flex-row-reverse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="/">Home</a>
+        <% Refinery::Page.fast_menu.each do |menu| %>
+          <% path = menu.link_url.present? ? menu.link_url : "/#{menu.slug}" %>
+          <li class="nav-item mx-2">
+          <a class="nav-link <%= 'active' if path == request.path %>" href="<%= path %>"><%= menu.title %></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/blog">Blog</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/events">Events</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/about">About</a>
-        </li>
+      <% end %>
       </ul>
     </div>
   </div>
