--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,1 +1,10 @@
-<%= render '/refinery/content_page' %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">
+      <%= render "/refinery/main_content" %>
+    </div>
+    <div class="col-sm-4">
+      <%= render "/refinery/sidebar" %>
+    </div>
+  </div>
+</div>
