--- a/app/views/refinery/_main_content.html.erb
+++ b/app/views/refinery/_main_content.html.erb
@@ -1,30 +1,11 @@
-<section id="main_content" class="row">
+<section id="main_content">
   <% 5.times do |i| %>
-  <div class="mb-4">
-    <div class="card border-0">
-      <div class="card-body">
-        <div class="button-group tags-list">
-          <a href="#" role="button" class="btn btn-success btn-sm active">tag1</a>
-          <a href="#" role="button" class="btn btn-success btn-sm active">tag2</a>
-        </div>
-        <h4 class="card-title mt-3 mb-4 underline">
-          <a class="text-dark" href="/"><%= "Card title #{i}" %></a>
-        </h4>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-        <div class="post-footer">
-          <span class="date"><%= Date.today %></span>
-          <span class="mx-3">|</span>
-          <span><i class="far fa-comment"></i>: <%= (Random.rand * 1000).to_i %></span>
-          <a href="#" role="button" class="btn btn-success btn-sm active">Read More</a>
-        </div>
-      </div>
-    </div>
-  </div>
+  <%= render partial: '/refinery/long_list_item', locals: { :i =>  i } %>
   <% end %>
+
   <ul class="pagination">
     <li class="page-item disabled"><a class="page-link" href="#">1</a></li>
     <li class="page-item"><a class="page-link" href="#">2</a></li>
     <li class="page-item"><a class="page-link" href="#">3</a></li>
   </ul>
-
 </section>
