--- a/app/views/refinery/_list_item.html.erb
+++ b/app/views/refinery/_list_item.html.erb
@@ -1,6 +1,6 @@
 <div class="mb-4 col-6">
   <div class="card border-0">
-    <img class="blog-image" src="https://via.placeholder.com/1200x900" alt="hello" />
+    <img class="blog-image" src="https://placekitten.com/1366/768" alt="hello" />
     <div class="card-body">
       <h4 class="card-title mb-4 underline">
         <a class="text-dark" href="/"><%= "Card title #{i}" %></a>
