--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <%= render "/refinery/head" %>
     <%= render "/refinery/javascripts" %>
   </head>
-  <body id="<%= canonical_id @page %>">
+  <body >
     <div id="page_container" class="mt-3">
       <header id="header" role="banner">
         <%= render "/refinery/header" -%>
