feat: basic stylesheet for detail page.

--- a/app/views/refinery/_footer.html.erb
+++ b/app/views/refinery/_footer.html.erb
@@ -1,6 +1,6 @@
-<footer id="footer" class="py-5 bg-light">
+<footer id="footer" class="py-5 bg-dark">
   <div class="container text-center">
-    <span class="text-muted text-dark">
+    <span class="text-light">
       <%= t('.copyright', :year => Time.now.year, :site_name => nil) %> Powered By RefineryCMS
     </span>
   </div>
