--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -58,15 +58,9 @@ body {
 }
 
 .post-footer {
-  color: $detail-color;
   font-size: 0.875rem;
   padding-top: 0.5rem;
   border-top: 1px solid #f1f1f1;
-
-  a {
-    text-decoration: underline;
-    color: $success;
-  }
 
   .btn-sm {
     text-transform: uppercase;
@@ -137,6 +131,17 @@ body {
 
 .detail-content {
   padding: 0 6.875rem;
+
+  .post-footer {
+    a {
+      text-decoration: underline;
+      color: $success;
+    }
+
+    .author img {
+      width: 1.5rem;
+    }
+  }
 }
 
 .post-details {
@@ -149,10 +154,16 @@ body {
   width: 600px;
   margin: 30px auto;
 
+  .flash {
+    color: #ff7a00;
+    font-size: 0.875rem;
+  }
+
   form {
     label {
       margin: 0;
       color: #575757;
+      font-size: 0.875rem;
     }
 
     input, textarea {
@@ -161,6 +172,7 @@ body {
       margin: 0.2rem auto 1.5rem;
       border: 1px solid $detail-color;
       border-radius: 2px;
+      font-size: 1rem;
       padding: 0.3rem 0.5rem;
 
       &:focus {
@@ -180,5 +192,23 @@ body {
       width: auto;
       margin: 1.5rem 0 1rem auto;
     }
+  }
+}
+
+.blog_comment_message {
+  box-shadow: 0 0 20px -10px #000;
+  background: #fff;
+  padding: 20px;
+  border-radius: 2px;
+
+  footer p {
+    margin: 0;
+    text-align: right;
+    font-size: 0.875rem;
+    color: #ddd;
+  }
+
+  + .blog_comment_message {
+    margin-top: 1rem;
   }
 }
