--- a/app/views/refinery/blog/posts/show.html.erb
+++ b/app/views/refinery/blog/posts/show.html.erb
@@ -1,11 +1,9 @@
-<% content_for :body do %>
-  <div id="show_blog_post">
-    <%= render 'post' %>
-  </div>
+<% content_for :stylesheets, stylesheet_link_tag('blog_page') %>
 
-  <%= render 'comments' %>
-<% end %>
+<div id="show_blog_post">
+  <%= render 'post' %>
+</div>
 
-<%= render '/refinery/blog/shared/body_content_right' %>
+<%= render 'comments' %>
 
-<%= render "/refinery/content_page", :remove_automatic_sections => true %>
+<%#= render '/refinery/blog/shared/body_content_right' %>
