feat: basic information.

--- a/app/views/refinery/_sidebar.html.erb
+++ b/app/views/refinery/_sidebar.html.erb
@@ -2,7 +2,10 @@
   <div class="card info-section border-0 mb-3">
     <div class="card-body">
       <h6 class="card-title">About</h6>
-      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      <div class="avatar">
+        <%= image_tag 'avatar.png' %>
+      </div>
+      <p class="card-text">I'am Lan. The full stack developer in China. Working for Beansmile in GuangZhou with very cool tech Ruby, JavaScript, etc.</p>
     </div>
 
   </div>
