--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -5,6 +5,10 @@ body {
   padding-top: 4.5rem;
 }
 
+img {
+  max-width: 100%;
+}
+
 .markdown-body a {
   color: $success;
 }
@@ -18,6 +22,15 @@ body {
 
   .card-body {
     padding: 1.25rem 15px;
+
+    .avatar {
+      text-align: center;
+      margin-bottom: 1rem;
+
+      img {
+        width: 70px;
+      }
+    }
   }
 
   .btn-sm {
