--- a/app/views/refinery/_sidebar.html.erb
+++ b/app/views/refinery/_sidebar.html.erb
@@ -23,18 +23,12 @@
     <div class="card-body">
       <h6 class="card-title">Category</h6>
       <ul class="list-group list-group-flush">
+        <% @categories.each do |category| %>
         <li class="list-group-item d-flex justify-content-between align-items-center px-1">
-          Cras justo odio
-          <span class="badge badge-success">14</span>
+          <%= link_to(category.title, refinery.blog_category_path(category), class: 'text-success') %>
+          <span class="badge badge-success"><%= category.posts.size %></span>
         </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center px-1">
-          Dapibus ac facilisis in
-          <span class="badge badge-success">2</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center px-1">
-          Morbi leo risus
-          <span class="badge badge-success">1</span>
-        </li>
+        <% end %>
       </ul>
     </div>
   </div>
