--- a/app/views/refinery/_header.html.erb
+++ b/app/views/refinery/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light py-3 border-bottom fixed-top" style="background-color: #fff;">
+<nav class="navbar navbar-expand-md navbar-light py-3 border-bottom fixed-top" style="background-color: rgba(255, 255, 255, 0.9)">
   <div class="container">
     <a class="navbar-brand font-weight-bold" href="/">Lan's Blog</a>
     <button class="navbar-toggler border-0" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
