feat: Add markdown support for page.

--- a/app/views/refinery/_sidebar.html.erb
+++ b/app/views/refinery/_sidebar.html.erb
@@ -5,7 +5,7 @@
       <div class="avatar">
         <%= image_tag 'avatar.png' %>
       </div>
-      <p class="card-text">I'am Lan. The full stack developer in China. Working for Beansmile in GuangZhou with very cool tech Ruby, JavaScript, etc.</p>
+      <p class="card-text">Hi, I'am Lan. The fullstack developer in China. Working for Beansmile in GuangZhou with very cool technology Ruby, JavaScript, etc.</p>
     </div>
 
   </div>
