--- a/app/views/refinery/blog/posts/_post.html.erb
+++ b/app/views/refinery/blog/posts/_post.html.erb
@@ -14,7 +14,7 @@
   <div class="detail-content mt-5">
     <div class="detail-content-inner border-top py-5">
       <article class="markdown-body">
-        <%= @post.body.html_safe %>
+        <%= @post.html_body.html_safe %>
       </article>
     </div>
     <footer class="post-footer p-3 border d-flex justify-content-between" style="border-radius: 1px;">
