--- a/app/views/refinery/_long_list_item.html.erb
+++ b/app/views/refinery/_long_list_item.html.erb
@@ -14,7 +14,7 @@
         <span class="date"><%= post.published_at.strftime('%Y-%m-%d') %></span>
         <span class="mx-3">|</span>
         <span><i class="far fa-comment"></i>: <%= post.comments.size %></span>
-        <a href="<%= refinery.blog_post_path(post.id) %>" role="button" class="btn btn-success btn-sm float-right">Read More</a>
+        <a href="<%= refinery.blog_post_path(post) %>" role="button" class="btn btn-success btn-sm float-right">Read More</a>
       </div>
     </div>
   </div>
