feat: Add intro method.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,11 @@
         <%= render "/refinery/footer" -%>
       </footer>
     </div>
+    <script>
+      alert('I amd javascript')
+    </script>
+    <script type="text/coffeescript">
+      alert('I amd coffeescript')
+    </script>
   </body>
 </html>
