--- a/app/views/refinery/_long_list_item.html.erb
+++ b/app/views/refinery/_long_list_item.html.erb
@@ -9,7 +9,7 @@
       <h4 class="card-title mt-3 mb-4 underline">
         <a class="text-dark" href="/"><%= post.title %></a>
       </h4>
-      <p class="card-text"><%= post.custom_teaser.presence || "Without teaser now."  %></p>
+      <p class="card-text"><%= post.intro  %></p>
       <div class="post-footer">
         <span class="date"><%= post.published_at.strftime('%Y-%m-%d') %></span>
         <span class="mx-3">|</span>
