--- a/app/views/refinery/_sidebar.html.erb
+++ b/app/views/refinery/_sidebar.html.erb
@@ -12,10 +12,9 @@
   <div class="card info-section border-0 mb-3">
     <div class="card-body">
       <h6 class="card-title">Search</h6>
-      <form id="search_box" class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search" data-com.agilebits.onepassword.user-edited="yes">
+      <form id="search_box" action="/search" class="form-inline my-2 my-lg-0">
+        <input class="form-control mr-sm-2" name="q" type="text" placeholder="Search" aria-label="Search" data-com.agilebits.onepassword.user-edited="yes">
         <button class="btn btn-success" type="submit" href="/"><i class="fas fa-search"></i></button>
-
     </div>
 
   </div>
