--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -9,6 +9,9 @@
 <%= favicon_link_tag %>
 <%= foreign_link_resource %>
 <%= stylesheet_link_tag "application" %>
+<link rel="stylesheet"
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js"></script>
 <%= yield :stylesheets %>
 
 <%= render '/refinery/google_analytics' %>
