feat: Modify the basic stylesheet of blog post.

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -9,10 +9,6 @@ img {
   max-width: 100%;
 }
 
-.markdown-body a {
-  color: $success;
-}
-
 .blog-image {
   width: 100%
 }
@@ -221,5 +217,47 @@ img {
 
   + .blog_comment_message {
     margin-top: 1rem;
+  }
+}
+
+/* Stylesheet for blog post */
+.blog-post {
+  .markdown-body {
+    font-weight: 300;
+    letter-spacing: 0.5px;
+
+    a {
+      color: $success;
+      font-weight: 500;
+      text-decoration: underline;
+    }
+
+    h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+      margin-top: 2rem;
+    }
+
+    code {
+      color: #ff9d00;
+
+      &.hljs {
+        padding: 0.5em 1em;
+      }
+    }
+
+    p {
+      word-break: break-all;
+    }
+
+    blockquote {
+      background: #efefef;
+      border-left: 4px solid $success;
+      padding: 1em;
+      font-size: 16px;
+      font-style: oblique;
+
+      p {
+        margin: 0;
+      }
+    }
   }
 }
