--- a/app/views/refinery/_head.html.erb
+++ b/app/views/refinery/_head.html.erb
@@ -10,7 +10,7 @@
 <%= foreign_link_resource %>
 <%= stylesheet_link_tag "application" %>
 <link rel="stylesheet"
-      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/default.min.css">
+      href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/railscasts.min.css">
 <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/highlight.min.js"></script>
 <%= yield :stylesheets %>
 
