--- a/app/views/refinery/blog/categories/show.html.erb
+++ b/app/views/refinery/blog/categories/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <h3>Category: "<%= params[:id] %>"</h3>
   <div class="row">
     <div class="col-sm-8">
       <section id="main_content" >
