--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -232,6 +232,10 @@ img {
       text-decoration: underline;
     }
 
+    bold {
+      font-weight: bold;
+    }
+
     h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
       margin-top: 2rem;
     }
