--- a/app/views/refinery/pages/home.html.erb
+++ b/app/views/refinery/pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-8">
+    <div class="col-lg-8 col-md-7 col-sm-12">
       <%= render "/refinery/main_content" %>
     </div>
-    <div class="col-sm-4">
+    <div class="col-lg-4 col-md-5 col-sm-12">
       <%= render "/refinery/sidebar" %>
     </div>
   </div>
