--- a/app/views/refinery/blog/shared/_post.html.erb
+++ b/app/views/refinery/blog/shared/_post.html.erb
@@ -1,5 +1,5 @@
 <% if post.live? %>
-<div class="mb-4 col-6">
+<div class="mb-4 col-lg-6 col-md-12">
   <div class="card border-0">
     <img class="blog-image" src="https://placekitten.com/1366/768" alt="hello" />
     <div class="card-body">
