test: Add some test before refactor.

--- a/app/views/refinery/_sidebar.html.erb
+++ b/app/views/refinery/_sidebar.html.erb
@@ -1,5 +1,5 @@
 <aside id="sidebar">
-  <div class="card info-section border-0 mb-3">
+  <div class="card info-section border-0 mb-3" id="about_wrapper">
     <div class="card-body">
       <h6 class="card-title">About</h6>
       <div class="avatar">
@@ -9,7 +9,7 @@
     </div>
 
   </div>
-  <div class="card info-section border-0 mb-3">
+  <div class="card info-section border-0 mb-3" id="search_wrapper">
     <div class="card-body">
       <h6 class="card-title">Search</h6>
       <form id="search_box" action="/search" class="form-inline my-2 my-lg-0">
@@ -18,7 +18,7 @@
     </div>
 
   </div>
-  <div class="card info-section border-0 mb-3">
+  <div class="card info-section border-0 mb-3" id="categories_wrapper">
     <div class="card-body">
       <h6 class="card-title">Category</h6>
       <ul class="list-group list-group-flush">
