refactor: refactor the layout.

--- a/app/views/refinery/blog/posts/index.html.erb
+++ b/app/views/refinery/blog/posts/index.html.erb
@@ -1,21 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-sm-8">
-      <section id="main_content" >
-        <% if @posts.any? %>
-        <div id="blog_posts" class="row">
-          <%= render :partial => "/refinery/blog/shared/post", :collection => @posts %>
-          <%= will_paginate @posts %>
-        </div>
-        <% else %>
-        <p>
-          <%= t('.no_posts') %>
-        </p>
-        <% end %>
-      </section>
-    </div>
-    <div class="col-sm-4">
-      <%= render "/refinery/sidebar" %>
-    </div>
-  </div>
-</div>
+<%= render partial: '/refinery/shared/results' %>
