--- a/app/views/refinery/_sidebar.html.erb
+++ b/app/views/refinery/_sidebar.html.erb
@@ -15,6 +15,7 @@
       <form id="search_box" action="/search" class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" name="q" type="text" placeholder="Search" aria-label="Search" value="<%= params[:q] %>" data-com.agilebits.onepassword.user-edited="yes">
         <button class="btn btn-success" type="submit" href="/"><i class="fas fa-search"></i></button>
+      </form>
     </div>
 
   </div>
